bug fix: nav bar covering content in News page.

--- a/src/Components/Components-TopNews/TopNews.css
+++ b/src/Components/Components-TopNews/TopNews.css
@@ -48,7 +48,9 @@ a:hover {
 
 .components-topnews-buttons {
     display: flex;
+    justify-content: space-evenly;
 }
+
 .components-topnews-button {
     margin-bottom: 7rem;
 }
